<resources>
    <string name="app_name">FailCounter</string>
    <string name="screen_add_fail">Add fail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_last_items">Last 10 fails</string>

    <string name="authentication_unsuccesful">Firebase authentication failed!</string>

    <string name="add_fail_title">New fail</string>
    <string name="add_fail_author">By: %s</string>
    <string name="add_fail_reason">Reason:</string>
    <string name="add_fail_reason_placeholder">Reason</string>
    <string name="add_fail_reason_is_empty">Reason shouldn\'t be empty!</string>
    <string name="add_fail_datetime">Date and time:</string>
    <string name="add_fail_submit">Add Fail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login">Log in</string>
    <string name="anonymous">Anonymous</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_successful">Successfully logged in!</string>
    <string name="login_unsuccessful">Username and/or password are wrong.</string>

    <string name="error_not_logged_in">You need to login to proceed!</string>
</resources>
